# mps-lang

./: .gitignore  Cargo.toml  README.md  test_tensor_matmul.mps  test_tensors.mps
src/: ast.rs  codegen.rs  lexer.rs  main.rs  mps_pkg.rs  optimizer.rs  parser.rs  runtime.h  typechecker.rs
stdlib/: io.mps  math.mps  random.mps  strings.mps
target_custom3/debug/: mps.d
target_custom3/debug/.fingerprint/anstyle-bfecf3f271395ff4/: lib-anstyle.json
target_custom3/debug/.fingerprint/anstyle-parse-7203cf22d98bd7f3/: lib-anstyle_parse  lib-anstyle_parse.json
target_custom3/debug/.fingerprint/anstyle-query-eb16367c2387a662/: lib-anstyle_query
target_custom3/debug/.fingerprint/anstyle-wincon-d1fba94fe5bc7024/: lib-anstyle_wincon  lib-anstyle_wincon.json
target_custom3/debug/.fingerprint/bitflags-810630805d470c4d/: lib-bitflags.json
target_custom3/debug/.fingerprint/cfg-if-1b264547a31ae403/: lib-cfg_if
target_custom3/debug/.fingerprint/clap-ffb379c948dac33c/: lib-clap  lib-clap.json
target_custom3/debug/.fingerprint/clap_derive-99c1d6e9a39dcb45/: lib-clap_derive  lib-clap_derive.json
target_custom3/debug/.fingerprint/colorchoice-8e24a880de1b2893/: lib-colorchoice
target_custom3/debug/.fingerprint/displaydoc-3dae3544e4fcd375/: lib-displaydoc  lib-displaydoc.json
target_custom3/debug/.fingerprint/find-msvc-tools-08707f1fddde7e9d/: lib-find_msvc_tools  lib-find_msvc_tools.json
target_custom3/debug/.fingerprint/getrandom-ce7274e115b15fa1/: run-build-script-build-script-build  run-build-script-build-script-build.json
(+124 files in other folders)
