[package]
name = "mps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mps"
path = "src/main.rs"

[[bin]]
name = "mps_pkg"
path = "src/mps_pkg.rs"

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
